# py-ldap-server

./: .gitignore  CHANGELOG.md  DEPRECATION_WARNINGS_FIXED.md  JSON_STORAGE_ANALYSIS.md  JSON_STORAGE_CONSOLIDATION.md  JSON_STORAGE_TODOS.md  LICENSE  PHASE1_COMPLETE.md  README.md  RELEASE_NOTES.md  SECURITY.md  SECURITY_FIX_SUMMARY.md  UV_USAGE.md  data.json  demo.sh  lazy_loading_demo.py  pyproject.toml  run-server.sh  simple_lazy_demo.py  test_groups.json  test_phase1.py  test_users.json
.github/: copilot-instructions.md
docs/: README.md  SYSTEMD_DEPLOYMENT.md  SYSTEMD_SECURITY_REFERENCE.md
docs/api/: README.md  factory.md  server.md
docs/api/auth/: README.md  bind.md  password.md
docs/api/handlers/: README.md
docs/api/storage/: README.md  federated-json.md  json.md
docs/deployment/: README.md  systemd.md
docs/development/: PHASE1_TODOS.md  PHASE2_TODOS.md  PHASE3_TODOS.md  PHASE4_TODOS.md  README.md  architecture.md  contributing.md  roadmap.md  testing.md
docs/examples/: README.md
docs/examples/configuration/: basic.json  federated_groups.json  federated_users.json
docs/guides/: README.md  authentication.md  configuration.md  quick-start.md
scripts/: upgrade_passwords.py
src/ldap_server/: __init__.py  factory.py  server.py
src/ldap_server/auth/: __init__.py  password.py
src/ldap_server/handlers/: __init__.py  bind.py
src/ldap_server/storage/: __init__.py  json.py  memory.py
systemd/: py-ldap-server.service
tests/unit/: mock_storage.py  test_atomic_write_operations.py  test_bind.py  test_federated_json_storage.py  test_json_storage.py  test_lazy_loading.py  test_password.py  test_server.py  test_unified_json_storage.py
