[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-ldap-server"
version = "0.2.0"
description = "A Python LDAP server implementation using Ldaptor"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "evilerbender", email = "evilerbender@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP",
]
dependencies = [
    "ldaptor>=21.2.0",
    "twisted>=22.10.0",
    "watchdog>=3.0.0",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-twisted>=1.14.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
py-ldap-server = "ldap_server.server:main"

[project.urls]
Homepage = "https://github.com/evilerbender/py-ldap-server"
Repository = "https://github.com/evilerbender/py-ldap-server"
Issues = "https://github.com/evilerbender/py-ldap-server/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# addopts = "--cov=src/ldap_server --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore:'crypt' is deprecated:DeprecationWarning:passlib.*",
    "ignore:DistinguishedName.__str__ method is deprecated:DeprecationWarning:.*",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
